--- a/languages/woocommerce-jos-autocoupon-es_ES.po
+++ b/languages/woocommerce-jos-autocoupon-es_ES.po
@@ -5,53 +5,80 @@ msgstr ""
 "Project-Id-Version: WooCommerce auto added coupons 1.1.3.1\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/support/plugin/woocommerce-auto-"
 "added-coupons\n"
-"POT-Creation-Date: 2015-03-13 18:44:23+00:00\n"
+"POT-Creation-Date: 2015-05-03 21:01+0100\n"
+"PO-Revision-Date: 2015-05-03 21:07+0100\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2015-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"X-Generator: Poedit 1.5.7\n"
 
-#: woocommerce-jos-autocoupon.php:66
+#: C:\lamp\www\qrvm_woo\wp-content\plugins\woocommerce-auto-added-coupons/includes/wjecf-autocoupon.php:49
 msgid "Auto coupon"
 msgstr "Aplicar cupón automaticamente"
 
-#: woocommerce-jos-autocoupon.php:67
+#: C:\lamp\www\qrvm_woo\wp-content\plugins\woocommerce-auto-added-coupons/includes/wjecf-autocoupon.php:50
 msgid ""
 "Automatically add the coupon to the cart if the restrictions are met. Please "
 "enter a description when you check this box, the description will be shown "
-"in the customers cart if the coupon is applied. (JOS - Woocommerce auto "
-"added coupons plugin)."
+"in the customers cart if the coupon is applied."
 msgstr ""
 "Aplicar el cupón automaticamente al carrito de compras cuando los requisitos "
-"sean cumplidos. Por favor ingrese una descripción, ya que este será mostrado al "
-"cliente cuando el cupón esté aplicado. "
+"sean cumplidos. Por favor ingrese una descripción, ya que este será mostrado "
+"al cliente cuando el cupón esté aplicado."
 
-#: woocommerce-jos-autocoupon.php:121
-#~ msgid "Free shipping coupon"
-#~ msgstr "Cupón para envío gratis"
+#: C:\lamp\www\qrvm_woo\wp-content\plugins\woocommerce-auto-added-coupons/includes/wjecf-autocoupon.php:111
+msgid "Free shipping coupon"
+msgstr "Cupón para envío gratis"
 
-#: woocommerce-jos-autocoupon.php:205
+#: C:\lamp\www\qrvm_woo\wp-content\plugins\woocommerce-auto-added-coupons/includes/wjecf-autocoupon.php:218
+#, php-format
 msgid "Discount applied: %s"
 msgstr "Descuento aplicado: %s"
 
-#. Plugin Name of the plugin/theme
+#: C:\lamp\www\qrvm_woo\wp-content\plugins\woocommerce-auto-added-coupons/includes/wjecf-coupon-extensions.php:32
+msgid "Extended Coupon Features"
+msgstr "Más opciones para cupones"
+
+#: C:\lamp\www\qrvm_woo\wp-content\plugins\woocommerce-auto-added-coupons/includes/wjecf-coupon-extensions.php:34
+msgid "Donate to the developer"
+msgstr "Hacer una donación"
+
+#: C:\lamp\www\qrvm_woo\wp-content\plugins\woocommerce-auto-added-coupons/includes/wjecf-coupon-extensions.php:39
+msgid "Shipping methods"
+msgstr "Métodos de envío"
+
+#: C:\lamp\www\qrvm_woo\wp-content\plugins\woocommerce-auto-added-coupons/includes/wjecf-coupon-extensions.php:40
+#: C:\lamp\www\qrvm_woo\wp-content\plugins\woocommerce-auto-added-coupons/includes/wjecf-coupon-extensions.php:55
+msgid "Any shipping method"
+msgstr "Métodos de pago"
+
+#: C:\lamp\www\qrvm_woo\wp-content\plugins\woocommerce-auto-added-coupons/includes/wjecf-coupon-extensions.php:49
+msgid ""
+"One of these shipping methods must be selected in order for this coupon to "
+"be valid."
+msgstr ""
+"Uno de estos métodos de pago tiene que ser seleccionado para usar este cupón."
+
+#: C:\lamp\www\qrvm_woo\wp-content\plugins\woocommerce-auto-added-coupons/includes/wjecf-coupon-extensions.php:54
+msgid "Payment methods"
+msgstr "Métodos de pago"
+
+#: C:\lamp\www\qrvm_woo\wp-content\plugins\woocommerce-auto-added-coupons/includes/wjecf-coupon-extensions.php:64
+msgid ""
+"One of these payment methods must be selected in order for this coupon to be "
+"valid."
+msgstr ""
+"Uno de estos métodos de envío tiene que ser seleccionado para usar este "
+"cupón."
+
+#~ msgid ""
+#~ "Allow discounts to be automatically added to the cart when it's "
+#~ "restrictions are met. Allow applying coupons via an url."
+#~ msgstr ""
+#~ "Aplicar ciertos cupónes automaticamente al carrito de compras cuando los "
+#~ "requisitos sean cumplidos. Aplicar cupones a través de la url. "
+
 #~ msgid "WooCommerce auto added coupons"
 #~ msgstr "WooCommerce auto added coupons"
-
-#. Plugin URI of the plugin/theme
-msgid "http://wordpress.org/plugins/woocommerce-auto-added-coupons"
-msgstr ""
-
-#. Description of the plugin/theme
-msgid ""
-"Allow discounts to be automatically added to the cart when it's restrictions "
-"are met. Allow applying coupons via an url."
-msgstr ""
-"Aplicar ciertos cupónes automaticamente al carrito de compras cuando los "
-"requisitos sean cumplidos. Aplicar cupones a través de la url. "
-
-#. Author of the plugin/theme
-#~ msgid "Jos Koenis"
-#~ msgstr ""
