--- a/languages/woocommerce-jos-autocoupon-nl_NL.po
+++ b/languages/woocommerce-jos-autocoupon-nl_NL.po
@@ -5,54 +5,72 @@ msgstr ""
 "Project-Id-Version: WooCommerce auto added coupons 1.1.3.1\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/support/plugin/woocommerce-auto-"
 "added-coupons\n"
-"POT-Creation-Date: 2015-03-13 18:44:23+00:00\n"
+"POT-Creation-Date: 2015-05-03 21:01+0100\n"
+"PO-Revision-Date: 2015-05-03 21:09+0100\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2015-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"X-Generator: Poedit 1.5.7\n"
 
-#: woocommerce-jos-autocoupon.php:66
+#: C:\lamp\www\qrvm_woo\wp-content\plugins\woocommerce-auto-added-coupons/includes/wjecf-autocoupon.php:49
 msgid "Auto coupon"
 msgstr "Automatisch toepassen"
 
-#: woocommerce-jos-autocoupon.php:67
+#: C:\lamp\www\qrvm_woo\wp-content\plugins\woocommerce-auto-added-coupons/includes/wjecf-autocoupon.php:50
 msgid ""
 "Automatically add the coupon to the cart if the restrictions are met. Please "
 "enter a description when you check this box, the description will be shown "
-"in the customers cart if the coupon is applied. (JOS - Woocommerce auto "
-"added coupons plugin)."
+"in the customers cart if the coupon is applied."
 msgstr ""
-"Voeg de kortingsbon automatisch toe aan het winkelwagentje als aan alle voorwaarden "
-"wordt voldaan. Vult u a.u.b. een omschrijving in als u deze optie aanvinkt, de "
-"omschrijving zal aan de klant worden getoond wanneer de kortingsbon wordt toegevoegd."
-" (JOS - Woocommerce auto added coupons plugin)."
+"Voeg de kortingsbon automatisch toe aan het winkelwagentje als aan alle "
+"voorwaarden wordt voldaan. Vult u a.u.b. een omschrijving in als u deze "
+"optie aanvinkt, de omschrijving zal aan de klant worden getoond wanneer de "
+"kortingsbon wordt toegevoegd."
 
-#: woocommerce-jos-autocoupon.php:121
-#~ msgid "Free shipping coupon"
-#~ msgstr "Gratis verzending kortingsbon"
+#: C:\lamp\www\qrvm_woo\wp-content\plugins\woocommerce-auto-added-coupons/includes/wjecf-autocoupon.php:111
+msgid "Free shipping coupon"
+msgstr "Gratis verzending kortingsbon"
 
-#: woocommerce-jos-autocoupon.php:205
+#: C:\lamp\www\qrvm_woo\wp-content\plugins\woocommerce-auto-added-coupons/includes/wjecf-autocoupon.php:218
+#, php-format
 msgid "Discount applied: %s"
 msgstr "Korting toegepast: %s"
 
-#. Plugin Name of the plugin/theme
-#~ msgid "WooCommerce auto added coupons"
-#~ msgstr "WooCommerce auto added coupons"
+#: C:\lamp\www\qrvm_woo\wp-content\plugins\woocommerce-auto-added-coupons/includes/wjecf-coupon-extensions.php:32
+msgid "Extended Coupon Features"
+msgstr "Uitgebreide Kortingsbon Eigenschappen"
 
-#. Plugin URI of the plugin/theme
-#msgid "http://wordpress.org/plugins/woocommerce-auto-added-coupons"
-#msgstr ""
+#: C:\lamp\www\qrvm_woo\wp-content\plugins\woocommerce-auto-added-coupons/includes/wjecf-coupon-extensions.php:34
+msgid "Donate to the developer"
+msgstr "Doneer aan de ontwikkelaar"
 
-#. Description of the plugin/theme
+#: C:\lamp\www\qrvm_woo\wp-content\plugins\woocommerce-auto-added-coupons/includes/wjecf-coupon-extensions.php:39
+msgid "Shipping methods"
+msgstr "Verzendmethoden"
+
+#: C:\lamp\www\qrvm_woo\wp-content\plugins\woocommerce-auto-added-coupons/includes/wjecf-coupon-extensions.php:40
+#: C:\lamp\www\qrvm_woo\wp-content\plugins\woocommerce-auto-added-coupons/includes/wjecf-coupon-extensions.php:55
+msgid "Any shipping method"
+msgstr "Betaalmethoden"
+
+#: C:\lamp\www\qrvm_woo\wp-content\plugins\woocommerce-auto-added-coupons/includes/wjecf-coupon-extensions.php:49
 msgid ""
-"Allow discounts to be automatically added to the cart when it's restrictions "
-"are met. Allow applying coupons via an url."
+"One of these shipping methods must be selected in order for this coupon to "
+"be valid."
 msgstr ""
-"Staat het automatisch aan het winkelwagentje toevoegen van kortingsbonnen toe als aan "
-"de voorwaarden wordt voldaan. Kortingsbonnen toepassen middels url."
+"Een van deze verzendmethoden moet gekozen zijn om deze kortingsbon te kunnen "
+"gebruiken."
 
-#. Author of the plugin/theme
-#~ msgid "Jos Koenis"
-#~ msgstr ""
+#: C:\lamp\www\qrvm_woo\wp-content\plugins\woocommerce-auto-added-coupons/includes/wjecf-coupon-extensions.php:54
+msgid "Payment methods"
+msgstr "Betaalmethoden"
+
+#: C:\lamp\www\qrvm_woo\wp-content\plugins\woocommerce-auto-added-coupons/includes/wjecf-coupon-extensions.php:64
+msgid ""
+"One of these payment methods must be selected in order for this coupon to be "
+"valid."
+msgstr ""
+"Een van deze betaalmethoden moet gekozen zijn om deze kortingsbon te kunnen "
+"gebruiken."
