--- a/languages/woocommerce-jos-autocoupon-nl_NL.po
+++ b/languages/woocommerce-jos-autocoupon-nl_NL.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://wordpress.org/support/plugin/woocommerce-auto-"
 "added-coupons\n"
 "POT-Creation-Date: 2015-05-04 23:22+0100\n"
-"PO-Revision-Date: 2015-05-04 23:27+0100\n"
+"PO-Revision-Date: 2015-05-05 00:19+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -77,7 +77,7 @@ msgstr "Verzendmethoden"
 #: C:\lamp\www\qrvm_woo\wp-content\plugins\woocommerce-auto-added-coupons/includes/wjecf-coupon-extensions.php:69
 #: C:\lamp\www\qrvm_woo\wp-content\plugins\woocommerce-auto-added-coupons/includes/wjecf-coupon-extensions.php:84
 msgid "Any shipping method"
-msgstr "Betaalmethoden"
+msgstr "Verzendmethoden"
 
 #: C:\lamp\www\qrvm_woo\wp-content\plugins\woocommerce-auto-added-coupons/includes/wjecf-coupon-extensions.php:78
 msgid ""
